--- a/po/lt.po
+++ b/po/lt.po
@@ -173,7 +173,7 @@ msgid "Browse Icons…"
 msgstr "Naršyti piktogramas..."
 
 #: ../data/ui/MenulibreWindow.ui.h:29
-msgid "Browse Files..."
+msgid "Browse Files…"
 msgstr "Naršyti failus..."
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/Dialogs.py:39
@@ -223,14 +223,10 @@ msgid "Sort"
 msgstr "Rikiuoti"
 
 #: ../data/ui/MenulibreWindow.ui.h:41
-msgid "<small><i>Filename</i></small>"
-msgstr "<small><i>Failo pavadinimas</i></small>"
+msgid "Filename"
+msgstr "Failo pavadinimas"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
-msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Programos pavadinimas</b></big>"
-
-#: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Application Name"
 msgstr "Programos pavadinimas"
 
@@ -270,8 +266,8 @@ msgid "Working Directory"
 msgstr "Darbinis katalogas"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
-msgid "<b>Application Details</b>"
-msgstr "<b>Išsamiau apie programą</b>"
+msgid "Application Details"
+msgstr "Išsamiau apie programą"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "If set to \"True\", the program will be ran in a terminal window."
@@ -308,8 +304,8 @@ msgid "Hide from menus"
 msgstr "Slėpti iš meniu"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
-msgid "<b>Options</b>"
-msgstr "<b>Parinktys</b>"
+msgid "Options"
+msgstr "Parinktys"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "Add"
@@ -347,8 +343,8 @@ msgid "Apply"
 msgstr "Taikyti"
 
 #: ../data/ui/MenulibreWindow.ui.h:67
-msgid "<b>Select an icon</b>"
-msgstr "<b>Pasirinkite piktogramą</b>"
+msgid "Select an icon"
+msgstr "Pasirinkite piktogramą"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Search"
@@ -363,7 +359,7 @@ msgid "Log - Menulibre"
 msgstr "Žurnalas - Menulibre"
 
 #: ../data/ui/MenulibreWindow.ui.h:71
-msgid "<big><b>Parsing Errors</b></big>"
+msgid "Parsing Errors"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:72
@@ -611,27 +607,27 @@ msgstr ""
 "internete</a>."
 
 #: ../menulibre/MenulibreApplication.py:333
-msgid "Add _Launcher..."
+msgid "Add _Launcher…"
 msgstr "Pridėti _leistuką..."
 
 #: ../menulibre/MenulibreApplication.py:334
-msgid "Add Launcher..."
+msgid "Add Launcher…"
 msgstr "Pridėti leistuką..."
 
 #: ../menulibre/MenulibreApplication.py:340
-msgid "Add _Directory..."
+msgid "Add _Directory…"
 msgstr "Pridėti _katalogą..."
 
 #: ../menulibre/MenulibreApplication.py:341
-msgid "Add Directory..."
+msgid "Add Directory…"
 msgstr "Pridėti katalogą..."
 
 #: ../menulibre/MenulibreApplication.py:347
-msgid "_Add Separator..."
+msgid "_Add Separator…"
 msgstr "Pridėti _skirtuką..."
 
 #: ../menulibre/MenulibreApplication.py:348
-msgid "Add Separator..."
+msgid "Add Separator…"
 msgstr "Pridėti skirtuką..."
 
 #: ../menulibre/MenulibreApplication.py:354
@@ -722,11 +718,11 @@ msgid "New Shortcut"
 msgstr "Naujas susiejimas"
 
 #: ../menulibre/MenulibreApplication.py:1037
-msgid "Select a working directory..."
+msgid "Select a working directory…"
 msgstr "Pasirinkite darbinį katalogą..."
 
 #: ../menulibre/MenulibreApplication.py:1040
-msgid "Select an executable..."
+msgid "Select an executable…"
 msgstr "Pasirinkite vykdomąjį..."
 
 #: ../menulibre/MenulibreApplication.py:1062
@@ -851,11 +847,8 @@ msgstr ""
 #~ msgid "_File"
 #~ msgstr "_Failas"
 
-#~ msgid "<b>Select an image</b>"
-#~ msgstr "<b>Pasirinkite paveikslą</b>"
-
-#~ msgid "<b>Preview</b>"
-#~ msgstr "<b>Peržiūra</b>"
+#~ msgid "Preview"
+#~ msgstr "Peržiūra"
 
 #~ msgid "32px"
 #~ msgstr "32tšk"
