--- a/po/ca.po
+++ b/po/ca.po
@@ -174,7 +174,7 @@ msgid "Browse Icons…"
 msgstr "Explora les icones…"
 
 #: ../data/ui/MenulibreWindow.ui.h:29
-msgid "Browse Files..."
+msgid "Browse Files…"
 msgstr "Explora els fitxers…"
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/Dialogs.py:39
@@ -224,14 +224,10 @@ msgid "Sort"
 msgstr "Ordena"
 
 #: ../data/ui/MenulibreWindow.ui.h:41
-msgid "<small><i>Filename</i></small>"
-msgstr "<small><i>Nome del fitxer</i></small>"
+msgid "Filename"
+msgstr "Nome del fitxer"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
-msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Nom de l'aplicació</b></big>"
-
-#: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Application Name"
 msgstr "Nom de l'aplicació"
 
@@ -271,8 +267,8 @@ msgid "Working Directory"
 msgstr "Carpeta de treball"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
-msgid "<b>Application Details</b>"
-msgstr "<b>Detalls de l'aplicació</b>"
+msgid "Application Details"
+msgstr "Detalls de l'aplicació"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "If set to \"True\", the program will be ran in a terminal window."
@@ -309,8 +305,8 @@ msgid "Hide from menus"
 msgstr "Oculta en el menú"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
-msgid "<b>Options</b>"
-msgstr "<b>Opcions</b>"
+msgid "Options"
+msgstr "Opcions"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "Add"
@@ -348,8 +344,8 @@ msgid "Apply"
 msgstr "Aplica"
 
 #: ../data/ui/MenulibreWindow.ui.h:67
-msgid "<b>Select an icon</b>"
-msgstr "<b>Selecciona una icona</b>"
+msgid "Select an icon"
+msgstr "Selecciona una icona"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Search"
@@ -364,7 +360,7 @@ msgid "Log - Menulibre"
 msgstr "Registre - MenuLibre"
 
 #: ../data/ui/MenulibreWindow.ui.h:71
-msgid "<big><b>Parsing Errors</b></big>"
+msgid "Parsing Errors"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:72
@@ -612,27 +608,27 @@ msgstr ""
 "informació."
 
 #: ../menulibre/MenulibreApplication.py:333
-msgid "Add _Launcher..."
+msgid "Add _Launcher…"
 msgstr "Afegeix un _llançador…"
 
 #: ../menulibre/MenulibreApplication.py:334
-msgid "Add Launcher..."
+msgid "Add Launcher…"
 msgstr "Afegeix un llançador…"
 
 #: ../menulibre/MenulibreApplication.py:340
-msgid "Add _Directory..."
+msgid "Add _Directory…"
 msgstr "Afegeix una _carpeta…"
 
 #: ../menulibre/MenulibreApplication.py:341
-msgid "Add Directory..."
+msgid "Add Directory…"
 msgstr "Afegeix una carpeta…"
 
 #: ../menulibre/MenulibreApplication.py:347
-msgid "_Add Separator..."
+msgid "_Add Separator…"
 msgstr "_Afegeix un separador…"
 
 #: ../menulibre/MenulibreApplication.py:348
-msgid "Add Separator..."
+msgid "Add Separator…"
 msgstr "Afegeix un separador…"
 
 #: ../menulibre/MenulibreApplication.py:354
@@ -723,11 +719,11 @@ msgid "New Shortcut"
 msgstr "Drecera nova"
 
 #: ../menulibre/MenulibreApplication.py:1037
-msgid "Select a working directory..."
+msgid "Select a working directory…"
 msgstr "Seleccioneu una carpeta de treball…"
 
 #: ../menulibre/MenulibreApplication.py:1040
-msgid "Select an executable..."
+msgid "Select an executable…"
 msgstr "Seleccioneu un executable…"
 
 #: ../menulibre/MenulibreApplication.py:1062
@@ -849,14 +845,11 @@ msgstr ""
 #~ msgid "_File"
 #~ msgstr "_Fitxer"
 
-#~ msgid "<b>Preview</b>"
-#~ msgstr "<b>Previsualització</b>"
+#~ msgid "Preview"
+#~ msgstr "Previsualització"
 
 #~ msgid "Icon Selection"
 #~ msgstr "Selecció d’icones"
-
-#~ msgid "<b>Select an image</b>"
-#~ msgstr "<b>Trieu una imatge</b>"
 
 #~ msgid "If you don't save the launcher, all the changes will be lost.'"
 #~ msgstr "Si no deseu el llançador, es perdran tots els canvis."
