--- a/po/el.po
+++ b/po/el.po
@@ -177,7 +177,7 @@ msgid "Browse Icons…"
 msgstr "Περιήγηση Εικονιδίων..."
 
 #: ../data/ui/MenulibreWindow.ui.h:29
-msgid "Browse Files..."
+msgid "Browse Files…"
 msgstr "Περιήγηση Αρχείων…"
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/Dialogs.py:39
@@ -227,14 +227,10 @@ msgid "Sort"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:41
-msgid "<small><i>Filename</i></small>"
-msgstr "<small><i>Όνομα Αρχείου</i></small>"
+msgid "Filename"
+msgstr "Όνομα Αρχείου"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
-msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Όνομα Εφαρμογής</b></big>"
-
-#: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Application Name"
 msgstr "Όνομα Εφαρμογής"
 
@@ -274,8 +270,8 @@ msgid "Working Directory"
 msgstr "Κατάλογος Εργασίας"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
-msgid "<b>Application Details</b>"
-msgstr "<b>Λεπτομέρειες Εφαρμογής</b>"
+msgid "Application Details"
+msgstr "Λεπτομέρειες Εφαρμογής"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "If set to \"True\", the program will be ran in a terminal window."
@@ -313,8 +309,8 @@ msgid "Hide from menus"
 msgstr "Απόκρυψη από τα μενού"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
-msgid "<b>Options</b>"
-msgstr "<b>Επιλογές</b>"
+msgid "Options"
+msgstr "Επιλογές"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "Add"
@@ -352,8 +348,8 @@ msgid "Apply"
 msgstr "Εφαρμογή"
 
 #: ../data/ui/MenulibreWindow.ui.h:67
-msgid "<b>Select an icon</b>"
-msgstr "<b>Επιλογή εικονιδίου</b>"
+msgid "Select an icon"
+msgstr "Επιλογή εικονιδίου"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Search"
@@ -368,7 +364,7 @@ msgid "Log - Menulibre"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:71
-msgid "<big><b>Parsing Errors</b></big>"
+msgid "Parsing Errors"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:72
@@ -617,27 +613,27 @@ msgstr ""
 "περισσότερες πληροφορίες."
 
 #: ../menulibre/MenulibreApplication.py:333
-msgid "Add _Launcher..."
+msgid "Add _Launcher…"
 msgstr "Προσθήκη_Εκκινητή..."
 
 #: ../menulibre/MenulibreApplication.py:334
-msgid "Add Launcher..."
+msgid "Add Launcher…"
 msgstr "Προσθήκη Εκκινητή..."
 
 #: ../menulibre/MenulibreApplication.py:340
-msgid "Add _Directory..."
+msgid "Add _Directory…"
 msgstr "Προσθήκη_Καταλόγου..."
 
 #: ../menulibre/MenulibreApplication.py:341
-msgid "Add Directory..."
+msgid "Add Directory…"
 msgstr "Προσθήκη Καταλόγου..."
 
 #: ../menulibre/MenulibreApplication.py:347
-msgid "_Add Separator..."
+msgid "_Add Separator…"
 msgstr "_Προσθήκη Διαχωριστή..."
 
 #: ../menulibre/MenulibreApplication.py:348
-msgid "Add Separator..."
+msgid "Add Separator…"
 msgstr "Προσθήκη Διαχωριστή..."
 
 #: ../menulibre/MenulibreApplication.py:354
@@ -728,11 +724,11 @@ msgid "New Shortcut"
 msgstr "Νέα Συντόμευση"
 
 #: ../menulibre/MenulibreApplication.py:1037
-msgid "Select a working directory..."
+msgid "Select a working directory…"
 msgstr "Επιλογή καταλόγου εργασίας..."
 
 #: ../menulibre/MenulibreApplication.py:1040
-msgid "Select an executable..."
+msgid "Select an executable…"
 msgstr "Επιλογή εκτελέσιμου αρχείου..."
 
 #: ../menulibre/MenulibreApplication.py:1062
@@ -855,14 +851,11 @@ msgstr ""
 #~ msgid "_File"
 #~ msgstr "_Αρχείο"
 
-#~ msgid "<b>Preview</b>"
-#~ msgstr "<b>Προεπισκόπηση</b>"
+#~ msgid "Preview"
+#~ msgstr "Προεπισκόπηση"
 
 #~ msgid "Icon Selection"
 #~ msgstr "Επιλογή εικονιδίου"
-
-#~ msgid "<b>Select an image</b>"
-#~ msgstr "<b>Επιλέξτε μαι εικόνα</b>"
 
 #~ msgid "32px"
 #~ msgstr "32px"
