--- a/po/eu.po
+++ b/po/eu.po
@@ -149,7 +149,7 @@ msgid "Browse Icons…"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:29
-msgid "Browse Files..."
+msgid "Browse Files…"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/Dialogs.py:39
@@ -199,14 +199,10 @@ msgid "Sort"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:41
-msgid "<small><i>Filename</i></small>"
-msgstr "<small><i>Fitxategi-izena</i></small>"
+msgid "Filename"
+msgstr "Fitxategi-izena"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
-msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Aplikazioaren izena</b></big>"
-
-#: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Application Name"
 msgstr "Aplikazioaren izena"
 
@@ -240,8 +236,8 @@ msgid "Working Directory"
 msgstr "Lan-direktorioa"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
-msgid "<b>Application Details</b>"
-msgstr "<b>Aplikazioaren xehetasunak</b>"
+msgid "Application Details"
+msgstr "Aplikazioaren xehetasunak"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "If set to \"True\", the program will be ran in a terminal window."
@@ -272,8 +268,8 @@ msgid "Hide from menus"
 msgstr "Ezkutatu menuetatik"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
-msgid "<b>Options</b>"
-msgstr "<b>Aukerak</b>"
+msgid "Options"
+msgstr "Aukerak"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "Add"
@@ -311,8 +307,8 @@ msgid "Apply"
 msgstr "Aplikatu"
 
 #: ../data/ui/MenulibreWindow.ui.h:67
-msgid "<b>Select an icon</b>"
-msgstr "<b>Hautatu ikono bat</b>"
+msgid "Select an icon"
+msgstr "Hautatu ikono bat"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Search"
@@ -327,7 +323,7 @@ msgid "Log - Menulibre"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:71
-msgid "<big><b>Parsing Errors</b></big>"
+msgid "Parsing Errors"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:72
@@ -572,27 +568,27 @@ msgid ""
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:333
-msgid "Add _Launcher..."
+msgid "Add _Launcher…"
 msgstr "Gehitu _abiarazlea..."
 
 #: ../menulibre/MenulibreApplication.py:334
-msgid "Add Launcher..."
+msgid "Add Launcher…"
 msgstr "Gehitu abiarazlea..."
 
 #: ../menulibre/MenulibreApplication.py:340
-msgid "Add _Directory..."
+msgid "Add _Directory…"
 msgstr "Gehitu _direktorioa..."
 
 #: ../menulibre/MenulibreApplication.py:341
-msgid "Add Directory..."
+msgid "Add Directory…"
 msgstr "Gehitu direktorioa..."
 
 #: ../menulibre/MenulibreApplication.py:347
-msgid "_Add Separator..."
+msgid "_Add Separator…"
 msgstr "Gehitu _bereizlea..."
 
 #: ../menulibre/MenulibreApplication.py:348
-msgid "Add Separator..."
+msgid "Add Separator…"
 msgstr "Gehitu _bereizlea..."
 
 #: ../menulibre/MenulibreApplication.py:354
@@ -683,11 +679,11 @@ msgid "New Shortcut"
 msgstr "Laster-tekla berria"
 
 #: ../menulibre/MenulibreApplication.py:1037
-msgid "Select a working directory..."
+msgid "Select a working directory…"
 msgstr "Hautatu lan-direktorio bat..."
 
 #: ../menulibre/MenulibreApplication.py:1040
-msgid "Select an executable..."
+msgid "Select an executable…"
 msgstr "Hautatu exekutagarri bat..."
 
 #: ../menulibre/MenulibreApplication.py:1062
@@ -812,11 +808,8 @@ msgstr ""
 #~ msgid "_File"
 #~ msgstr "_Fitxategia"
 
-#~ msgid "<b>Select an image</b>"
-#~ msgstr "<b>Hautatu irudi bat</b>"
-
-#~ msgid "<b>Preview</b>"
-#~ msgstr "<b>Aurrebista</b>"
+#~ msgid "Preview"
+#~ msgstr "Aurrebista"
 
 #~ msgid "32px"
 #~ msgstr "32px"
