--- a/po/fi.po
+++ b/po/fi.po
@@ -173,7 +173,7 @@ msgid "Browse Icons…"
 msgstr "Selaa kuvakkeita..."
 
 #: ../data/ui/MenulibreWindow.ui.h:29
-msgid "Browse Files..."
+msgid "Browse Files…"
 msgstr "Selaa tiedostoja..."
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/Dialogs.py:39
@@ -223,14 +223,10 @@ msgid "Sort"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:41
-msgid "<small><i>Filename</i></small>"
-msgstr "<small><i>Tiedston nimi</i></small>"
+msgid "Filename"
+msgstr "Tiedston nimi"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
-msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Sovelluksen nimi</b></big>"
-
-#: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Application Name"
 msgstr "Sovelluksen nimi"
 
@@ -270,8 +266,8 @@ msgid "Working Directory"
 msgstr "Työhakemisto"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
-msgid "<b>Application Details</b>"
-msgstr "<b>Sovelluksen kuvaus</b>"
+msgid "Application Details"
+msgstr "Sovelluksen kuvaus"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "If set to \"True\", the program will be ran in a terminal window."
@@ -306,8 +302,8 @@ msgid "Hide from menus"
 msgstr "Piilota valikoista"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
-msgid "<b>Options</b>"
-msgstr "<b>Asetukset</b>"
+msgid "Options"
+msgstr "Asetukset"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "Add"
@@ -345,8 +341,8 @@ msgid "Apply"
 msgstr "Toteuta"
 
 #: ../data/ui/MenulibreWindow.ui.h:67
-msgid "<b>Select an icon</b>"
-msgstr "<b>Valitse kuvake</b>"
+msgid "Select an icon"
+msgstr "Valitse kuvake"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Search"
@@ -361,7 +357,7 @@ msgid "Log - Menulibre"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:71
-msgid "<big><b>Parsing Errors</b></big>"
+msgid "Parsing Errors"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:72
@@ -607,27 +603,27 @@ msgid ""
 msgstr "Saadaksesi lisätietoja lue <a href='%s'>online-dokumentaatiota</a>."
 
 #: ../menulibre/MenulibreApplication.py:333
-msgid "Add _Launcher..."
+msgid "Add _Launcher…"
 msgstr "Lisää _käynnistin..."
 
 #: ../menulibre/MenulibreApplication.py:334
-msgid "Add Launcher..."
+msgid "Add Launcher…"
 msgstr "Lisää käynnistin..."
 
 #: ../menulibre/MenulibreApplication.py:340
-msgid "Add _Directory..."
+msgid "Add _Directory…"
 msgstr "Lisää _hakemisto..."
 
 #: ../menulibre/MenulibreApplication.py:341
-msgid "Add Directory..."
+msgid "Add Directory…"
 msgstr "Lisää hakemisto..."
 
 #: ../menulibre/MenulibreApplication.py:347
-msgid "_Add Separator..."
+msgid "_Add Separator…"
 msgstr "Lisää _erotin..."
 
 #: ../menulibre/MenulibreApplication.py:348
-msgid "Add Separator..."
+msgid "Add Separator…"
 msgstr "Lisää erotin..."
 
 #: ../menulibre/MenulibreApplication.py:354
@@ -718,11 +714,11 @@ msgid "New Shortcut"
 msgstr "Uusi pikakuvake"
 
 #: ../menulibre/MenulibreApplication.py:1037
-msgid "Select a working directory..."
+msgid "Select a working directory…"
 msgstr "Valitse työhakemisto..."
 
 #: ../menulibre/MenulibreApplication.py:1040
-msgid "Select an executable..."
+msgid "Select an executable…"
 msgstr "Valitse suoritettava sovellus..."
 
 #: ../menulibre/MenulibreApplication.py:1062
@@ -835,8 +831,8 @@ msgstr ""
 #~ msgid "Icon Name"
 #~ msgstr "Kuvakkeen nimi"
 
-#~ msgid "<b>Preview</b>"
-#~ msgstr "<b>Esikatselu</b>"
+#~ msgid "Preview"
+#~ msgstr "Esikatselu"
 
 #~ msgid "_Edit"
 #~ msgstr "_Muokkaa"
@@ -849,9 +845,6 @@ msgstr ""
 
 #~ msgid "Icon Selection"
 #~ msgstr "Kuvakkeen valinta"
-
-#~ msgid "<b>Select an image</b>"
-#~ msgstr "<b>Valitse kuva</b>"
 
 #~ msgid "32px"
 #~ msgstr "32px"
