--- a/po/hr.po
+++ b/po/hr.po
@@ -164,7 +164,7 @@ msgid "Browse Icons…"
 msgstr "Pregleda ikone...."
 
 #: ../data/ui/MenulibreWindow.ui.h:29
-msgid "Browse Files..."
+msgid "Browse Files…"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/Dialogs.py:39
@@ -214,16 +214,12 @@ msgid "Sort"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:41
-msgid "<small><i>Filename</i></small>"
-msgstr "<small><i>Datotečno ime</i></small>"
+msgid "Filename"
+msgstr "Datotečno ime"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
-msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Naziv aplikacije</b></big>"
-
-#: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Application Name"
-msgstr ""
+msgstr "Naziv aplikacije"
 
 #: ../data/ui/MenulibreWindow.ui.h:44
 msgid "Application Comment"
@@ -255,8 +251,8 @@ msgid "Working Directory"
 msgstr "Radni direktorij"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
-msgid "<b>Application Details</b>"
-msgstr "<b>Pojedinosti programa</b>"
+msgid "Application Details"
+msgstr "Pojedinosti programa"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "If set to \"True\", the program will be ran in a terminal window."
@@ -287,8 +283,8 @@ msgid "Hide from menus"
 msgstr "Sakrij od izbornika"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
-msgid "<b>Options</b>"
-msgstr "<b>Mogućnosti</b>"
+msgid "Options"
+msgstr "Mogućnosti"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "Add"
@@ -326,8 +322,8 @@ msgid "Apply"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:67
-msgid "<b>Select an icon</b>"
-msgstr "<b>Izaberite ikonu</b>"
+msgid "Select an icon"
+msgstr "Izaberite ikonu"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Search"
@@ -342,7 +338,7 @@ msgid "Log - Menulibre"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:71
-msgid "<big><b>Parsing Errors</b></big>"
+msgid "Parsing Errors"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:72
@@ -586,27 +582,27 @@ msgid ""
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:333
-msgid "Add _Launcher..."
+msgid "Add _Launcher…"
 msgstr "Dodaj _pokretač..."
 
 #: ../menulibre/MenulibreApplication.py:334
-msgid "Add Launcher..."
+msgid "Add Launcher…"
 msgstr "Dodaj pokretač..."
 
 #: ../menulibre/MenulibreApplication.py:340
-msgid "Add _Directory..."
+msgid "Add _Directory…"
 msgstr "Dodaj _direktorij..."
 
 #: ../menulibre/MenulibreApplication.py:341
-msgid "Add Directory..."
+msgid "Add Directory…"
 msgstr "Dodaj direktorij..."
 
 #: ../menulibre/MenulibreApplication.py:347
-msgid "_Add Separator..."
+msgid "_Add Separator…"
 msgstr "_Dodaj razdjelnik..."
 
 #: ../menulibre/MenulibreApplication.py:348
-msgid "Add Separator..."
+msgid "Add Separator…"
 msgstr "Dodaj razdjelnik..."
 
 #: ../menulibre/MenulibreApplication.py:354
@@ -697,11 +693,11 @@ msgid "New Shortcut"
 msgstr "Nova Prečica"
 
 #: ../menulibre/MenulibreApplication.py:1037
-msgid "Select a working directory..."
+msgid "Select a working directory…"
 msgstr "Odaberite radni direktorij..."
 
 #: ../menulibre/MenulibreApplication.py:1040
-msgid "Select an executable..."
+msgid "Select an executable…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:1062
@@ -822,8 +818,8 @@ msgstr ""
 #~ msgid "_File"
 #~ msgstr "_Datoteka"
 
-#~ msgid "<b>Preview</b>"
-#~ msgstr "<b>Pogled</b>"
+#~ msgid "Preview"
+#~ msgstr "Pogled"
 
 #~ msgid "If you don't save the launcher, all the changes will be lost.'"
 #~ msgstr "Ako ne spremite pokretač, sve će izmjene biti izgubljene."
