--- a/po/it.po
+++ b/po/it.po
@@ -173,7 +173,7 @@ msgid "Browse Icons…"
 msgstr "Sfoglia icone..."
 
 #: ../data/ui/MenulibreWindow.ui.h:29
-msgid "Browse Files..."
+msgid "Browse Files…"
 msgstr "Sfoglia file..."
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/Dialogs.py:39
@@ -223,16 +223,12 @@ msgid "Sort"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:41
-msgid "<small><i>Filename</i></small>"
-msgstr "<small><i>Nome file</i></small>"
+msgid "Filename"
+msgstr "Nome file"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
-msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Nome Applicazione</b></big>"
-
-#: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Application Name"
-msgstr "Nome dell'applicazione"
+msgstr "Nome Applicazione"
 
 #: ../data/ui/MenulibreWindow.ui.h:44
 msgid "Application Comment"
@@ -269,8 +265,8 @@ msgid "Working Directory"
 msgstr "Directory di lavoro"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
-msgid "<b>Application Details</b>"
-msgstr "<b>Dettagli dell'applicazione</b>"
+msgid "Application Details"
+msgstr "Dettagli dell'applicazione"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "If set to \"True\", the program will be ran in a terminal window."
@@ -306,8 +302,8 @@ msgid "Hide from menus"
 msgstr "Nascondi dal menu"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
-msgid "<b>Options</b>"
-msgstr "<b>Opzioni</b>"
+msgid "Options"
+msgstr "Opzioni"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "Add"
@@ -345,7 +341,7 @@ msgid "Apply"
 msgstr "Applica"
 
 #: ../data/ui/MenulibreWindow.ui.h:67
-msgid "<b>Select an icon</b>"
+msgid "Select an icon"
 msgstr "Seleziona un'icona"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
@@ -361,7 +357,7 @@ msgid "Log - Menulibre"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:71
-msgid "<big><b>Parsing Errors</b></big>"
+msgid "Parsing Errors"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:72
@@ -609,27 +605,27 @@ msgstr ""
 "informazioni."
 
 #: ../menulibre/MenulibreApplication.py:333
-msgid "Add _Launcher..."
+msgid "Add _Launcher…"
 msgstr "Aggiungi _avviatore..."
 
 #: ../menulibre/MenulibreApplication.py:334
-msgid "Add Launcher..."
+msgid "Add Launcher…"
 msgstr "Aggiungi avviatore..."
 
 #: ../menulibre/MenulibreApplication.py:340
-msgid "Add _Directory..."
+msgid "Add _Directory…"
 msgstr "Aggiungi _Directory..."
 
 #: ../menulibre/MenulibreApplication.py:341
-msgid "Add Directory..."
+msgid "Add Directory…"
 msgstr "Aggiungi Directory..."
 
 #: ../menulibre/MenulibreApplication.py:347
-msgid "_Add Separator..."
+msgid "_Add Separator…"
 msgstr "_Aggiungi separatore..."
 
 #: ../menulibre/MenulibreApplication.py:348
-msgid "Add Separator..."
+msgid "Add Separator…"
 msgstr "Aggiungi separatore..."
 
 #: ../menulibre/MenulibreApplication.py:354
@@ -720,11 +716,11 @@ msgid "New Shortcut"
 msgstr "Nuova scorciatoia"
 
 #: ../menulibre/MenulibreApplication.py:1037
-msgid "Select a working directory..."
+msgid "Select a working directory…"
 msgstr "Seleziona una directory di lavoro..."
 
 #: ../menulibre/MenulibreApplication.py:1040
-msgid "Select an executable..."
+msgid "Select an executable…"
 msgstr "Seleziona un eseguibile"
 
 #: ../menulibre/MenulibreApplication.py:1062
@@ -843,8 +839,8 @@ msgstr ""
 #~ msgid "_Help"
 #~ msgstr "_Aiuto"
 
-#~ msgid "<b>Preview</b>"
-#~ msgstr "<b>Anteprima</b>"
+#~ msgid "Preview"
+#~ msgstr "Anteprima"
 
 #~ msgid "_File"
 #~ msgstr "_File"
@@ -869,9 +865,6 @@ msgstr ""
 
 #~ msgid "Action Name"
 #~ msgstr "Nome dell'azione"
-
-#~ msgid "<b>Select an image</b>"
-#~ msgstr "<b>Selezione un'immagine</b>"
 
 #~ msgid "\"Terminal\": Whether the program runs in a terminal window."
 #~ msgstr ""
