--- a/po/ja.po
+++ b/po/ja.po
@@ -153,7 +153,7 @@ msgid "Browse Icons…"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:29
-msgid "Browse Files..."
+msgid "Browse Files…"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/Dialogs.py:39
@@ -203,14 +203,10 @@ msgid "Sort"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:41
-msgid "<small><i>Filename</i></small>"
-msgstr "<small><i>ファイル名</i></small>"
+msgid "Filename"
+msgstr "ファイル名"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
-msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>アプリケーション名</b></big>"
-
-#: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Application Name"
 msgstr "アプリケーション名"
 
@@ -244,8 +240,8 @@ msgid "Working Directory"
 msgstr "作業ディレクトリ"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
-msgid "<b>Application Details</b>"
-msgstr "<b>アプリケーションの詳細</b>"
+msgid "Application Details"
+msgstr "アプリケーションの詳細"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "If set to \"True\", the program will be ran in a terminal window."
@@ -276,8 +272,8 @@ msgid "Hide from menus"
 msgstr "メニューから隠す"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
-msgid "<b>Options</b>"
-msgstr "<b>オプション</b>"
+msgid "Options"
+msgstr "オプション"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "Add"
@@ -315,8 +311,8 @@ msgid "Apply"
 msgstr "適用"
 
 #: ../data/ui/MenulibreWindow.ui.h:67
-msgid "<b>Select an icon</b>"
-msgstr "<b>アイコンの選択</b>"
+msgid "Select an icon"
+msgstr "アイコンの選択"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Search"
@@ -331,7 +327,7 @@ msgid "Log - Menulibre"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:71
-msgid "<big><b>Parsing Errors</b></big>"
+msgid "Parsing Errors"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:72
@@ -573,27 +569,27 @@ msgid ""
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:333
-msgid "Add _Launcher..."
+msgid "Add _Launcher…"
 msgstr "ランチャーを追加(_L)..."
 
 #: ../menulibre/MenulibreApplication.py:334
-msgid "Add Launcher..."
+msgid "Add Launcher…"
 msgstr "ランチャーを追加..."
 
 #: ../menulibre/MenulibreApplication.py:340
-msgid "Add _Directory..."
+msgid "Add _Directory…"
 msgstr "辞書を追加(_D)..."
 
 #: ../menulibre/MenulibreApplication.py:341
-msgid "Add Directory..."
+msgid "Add Directory…"
 msgstr "辞書を追加..."
 
 #: ../menulibre/MenulibreApplication.py:347
-msgid "_Add Separator..."
+msgid "_Add Separator…"
 msgstr "セパレーターを追加(_A)..."
 
 #: ../menulibre/MenulibreApplication.py:348
-msgid "Add Separator..."
+msgid "Add Separator…"
 msgstr "セパレーターを追加..."
 
 #: ../menulibre/MenulibreApplication.py:354
@@ -684,11 +680,11 @@ msgid "New Shortcut"
 msgstr "新しいショートカット"
 
 #: ../menulibre/MenulibreApplication.py:1037
-msgid "Select a working directory..."
+msgid "Select a working directory…"
 msgstr "作業ディレクトリの選択..."
 
 #: ../menulibre/MenulibreApplication.py:1040
-msgid "Select an executable..."
+msgid "Select an executable…"
 msgstr "実行ファイルの選択.."
 
 #: ../menulibre/MenulibreApplication.py:1062
@@ -800,8 +796,8 @@ msgstr ""
 #~ msgid "Image File"
 #~ msgstr "画像ファイル"
 
-#~ msgid "<b>Preview</b>"
-#~ msgstr "<b>プレビュー</b>"
+#~ msgid "Preview"
+#~ msgstr "プレビュー"
 
 #~ msgid "_File"
 #~ msgstr "ファイル(_F)"
@@ -814,9 +810,6 @@ msgstr ""
 
 #~ msgid "Icon Selection"
 #~ msgstr "アイコン選択"
-
-#~ msgid "<b>Select an image</b>"
-#~ msgstr "<b>画像選択</b>"
 
 #~ msgid "32px"
 #~ msgstr "32px"
