--- a/po/ko.po
+++ b/po/ko.po
@@ -150,7 +150,7 @@ msgid "Browse Icons…"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:29
-msgid "Browse Files..."
+msgid "Browse Files…"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/Dialogs.py:39
@@ -200,16 +200,12 @@ msgid "Sort"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:41
-msgid "<small><i>Filename</i></small>"
+msgid "Filename"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:42
-msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>프로그램 이름</b></big>"
-
-#: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Application Name"
-msgstr ""
+msgstr "프로그램 이름"
 
 #: ../data/ui/MenulibreWindow.ui.h:44
 msgid "Application Comment"
@@ -241,7 +237,7 @@ msgid "Working Directory"
 msgstr "작업중인 폴더"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
-msgid "<b>Application Details</b>"
+msgid "Application Details"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:52
@@ -273,8 +269,8 @@ msgid "Hide from menus"
 msgstr "메뉴에서 숨기기"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
-msgid "<b>Options</b>"
-msgstr "<b>옵션</b>"
+msgid "Options"
+msgstr "옵션"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "Add"
@@ -312,7 +308,7 @@ msgid "Apply"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:67
-msgid "<b>Select an icon</b>"
+msgid "Select an icon"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:68
@@ -328,7 +324,7 @@ msgid "Log - Menulibre"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:71
-msgid "<big><b>Parsing Errors</b></big>"
+msgid "Parsing Errors"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:72
@@ -568,27 +564,27 @@ msgid ""
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:333
-msgid "Add _Launcher..."
+msgid "Add _Launcher…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:334
-msgid "Add Launcher..."
+msgid "Add Launcher…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:340
-msgid "Add _Directory..."
+msgid "Add _Directory…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:341
-msgid "Add Directory..."
+msgid "Add Directory…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:347
-msgid "_Add Separator..."
+msgid "_Add Separator…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:348
-msgid "Add Separator..."
+msgid "Add Separator…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:354
@@ -679,11 +675,11 @@ msgid "New Shortcut"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:1037
-msgid "Select a working directory..."
+msgid "Select a working directory…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:1040
-msgid "Select an executable..."
+msgid "Select an executable…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:1062
@@ -801,8 +797,8 @@ msgstr ""
 #~ msgid "_File"
 #~ msgstr "파일(_F)"
 
-#~ msgid "<b>Preview</b>"
-#~ msgstr "<b>미리보기</b>"
+#~ msgid "Preview"
+#~ msgstr "미리보기"
 
 #~ msgid "_Help"
 #~ msgstr "도움말(_H)"
