--- a/po/ms.po
+++ b/po/ms.po
@@ -173,7 +173,7 @@ msgid "Browse Icons…"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:29
-msgid "Browse Files..."
+msgid "Browse Files…"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/Dialogs.py:39
@@ -223,14 +223,10 @@ msgid "Sort"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:41
-msgid "<small><i>Filename</i></small>"
-msgstr "<small><i>Nama Fail</i></small>"
+msgid "Filename"
+msgstr "Nama Fail"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
-msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Nama Aplikasi</b></big>"
-
-#: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Application Name"
 msgstr "Nama Aplikasi"
 
@@ -269,8 +265,8 @@ msgid "Working Directory"
 msgstr "Direktori Kerja"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
-msgid "<b>Application Details</b>"
-msgstr "<b>Perincian Aplikasi</b>"
+msgid "Application Details"
+msgstr "Perincian Aplikasi"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "If set to \"True\", the program will be ran in a terminal window."
@@ -307,8 +303,8 @@ msgid "Hide from menus"
 msgstr "Sembunyi dari menu"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
-msgid "<b>Options</b>"
-msgstr "<b>Pilihan</b>"
+msgid "Options"
+msgstr "Pilihan"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "Add"
@@ -346,8 +342,8 @@ msgid "Apply"
 msgstr "Laksana"
 
 #: ../data/ui/MenulibreWindow.ui.h:67
-msgid "<b>Select an icon</b>"
-msgstr "<b>Pilih satu ikon</b>"
+msgid "Select an icon"
+msgstr "Pilih satu ikon"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Search"
@@ -362,7 +358,7 @@ msgid "Log - Menulibre"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:71
-msgid "<big><b>Parsing Errors</b></big>"
+msgid "Parsing Errors"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:72
@@ -610,27 +606,27 @@ msgid ""
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:333
-msgid "Add _Launcher..."
+msgid "Add _Launcher…"
 msgstr "Tambah Pe_lancar..."
 
 #: ../menulibre/MenulibreApplication.py:334
-msgid "Add Launcher..."
+msgid "Add Launcher…"
 msgstr "Tambah Pelancar..."
 
 #: ../menulibre/MenulibreApplication.py:340
-msgid "Add _Directory..."
+msgid "Add _Directory…"
 msgstr "Tambah _Direktori..."
 
 #: ../menulibre/MenulibreApplication.py:341
-msgid "Add Directory..."
+msgid "Add Directory…"
 msgstr "Tambah Direktori..."
 
 #: ../menulibre/MenulibreApplication.py:347
-msgid "_Add Separator..."
+msgid "_Add Separator…"
 msgstr "T_ambah Pemisah..."
 
 #: ../menulibre/MenulibreApplication.py:348
-msgid "Add Separator..."
+msgid "Add Separator…"
 msgstr "Tambah Pemisah..."
 
 #: ../menulibre/MenulibreApplication.py:354
@@ -721,11 +717,11 @@ msgid "New Shortcut"
 msgstr "Pintasan Baharu"
 
 #: ../menulibre/MenulibreApplication.py:1037
-msgid "Select a working directory..."
+msgid "Select a working directory…"
 msgstr "Pilih satu direktori kerja..."
 
 #: ../menulibre/MenulibreApplication.py:1040
-msgid "Select an executable..."
+msgid "Select an executable…"
 msgstr "Pilih satu bolehlaku..."
 
 #: ../menulibre/MenulibreApplication.py:1062
@@ -846,14 +842,11 @@ msgstr ""
 #~ msgid "_File"
 #~ msgstr "_Fail"
 
-#~ msgid "<b>Preview</b>"
-#~ msgstr "<b>Pratonton</b>"
+#~ msgid "Preview"
+#~ msgstr "Pratonton"
 
 #~ msgid "Icon Selection"
 #~ msgstr "Pemilihan Ikon"
-
-#~ msgid "<b>Select an image</b>"
-#~ msgstr "<b>Pilih satu imej</b>"
 
 #~ msgid "32px"
 #~ msgstr "32px"
