--- a/po/pl.po
+++ b/po/pl.po
@@ -172,7 +172,7 @@ msgid "Browse Icons…"
 msgstr "Przeglądaj ikony..."
 
 #: ../data/ui/MenulibreWindow.ui.h:29
-msgid "Browse Files..."
+msgid "Browse Files…"
 msgstr "Przeglądaj pliki..."
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/Dialogs.py:39
@@ -222,14 +222,10 @@ msgid "Sort"
 msgstr "Sortowanie"
 
 #: ../data/ui/MenulibreWindow.ui.h:41
-msgid "<small><i>Filename</i></small>"
-msgstr "<small><i>Nazwa pliku</i></small>"
+msgid "Filename"
+msgstr "Nazwa pliku"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
-msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Nazwa programu</b></big>"
-
-#: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Application Name"
 msgstr "Nazwa programu"
 
@@ -268,8 +264,8 @@ msgid "Working Directory"
 msgstr "Katalog roboczy"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
-msgid "<b>Application Details</b>"
-msgstr "<b>Szczegóły programu</b>"
+msgid "Application Details"
+msgstr "Szczegóły programu"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "If set to \"True\", the program will be ran in a terminal window."
@@ -305,8 +301,8 @@ msgid "Hide from menus"
 msgstr "Ukrycie w menu"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
-msgid "<b>Options</b>"
-msgstr "<b>Opcje</b>"
+msgid "Options"
+msgstr "Opcje"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "Add"
@@ -344,8 +340,8 @@ msgid "Apply"
 msgstr "Zastosuj"
 
 #: ../data/ui/MenulibreWindow.ui.h:67
-msgid "<b>Select an icon</b>"
-msgstr "<b>Proszę wybrać ikonę</b>"
+msgid "Select an icon"
+msgstr "Proszę wybrać ikonę"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Search"
@@ -360,7 +356,7 @@ msgid "Log - Menulibre"
 msgstr "Dziennik - Menulibre"
 
 #: ../data/ui/MenulibreWindow.ui.h:71
-msgid "<big><b>Parsing Errors</b></big>"
+msgid "Parsing Errors"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:72
@@ -609,27 +605,27 @@ msgstr ""
 "informacji."
 
 #: ../menulibre/MenulibreApplication.py:333
-msgid "Add _Launcher..."
+msgid "Add _Launcher…"
 msgstr "Dodaj _aktywator..."
 
 #: ../menulibre/MenulibreApplication.py:334
-msgid "Add Launcher..."
+msgid "Add Launcher…"
 msgstr "Dodaj aktywator..."
 
 #: ../menulibre/MenulibreApplication.py:340
-msgid "Add _Directory..."
+msgid "Add _Directory…"
 msgstr "Dodaj _katalog..."
 
 #: ../menulibre/MenulibreApplication.py:341
-msgid "Add Directory..."
+msgid "Add Directory…"
 msgstr "Dodaj katalog..."
 
 #: ../menulibre/MenulibreApplication.py:347
-msgid "_Add Separator..."
+msgid "_Add Separator…"
 msgstr "Dodaj _separator..."
 
 #: ../menulibre/MenulibreApplication.py:348
-msgid "Add Separator..."
+msgid "Add Separator…"
 msgstr "Dodaj separator..."
 
 #: ../menulibre/MenulibreApplication.py:354
@@ -720,11 +716,11 @@ msgid "New Shortcut"
 msgstr "Nowy skrót"
 
 #: ../menulibre/MenulibreApplication.py:1037
-msgid "Select a working directory..."
+msgid "Select a working directory…"
 msgstr "Wybór katalogu roboczego..."
 
 #: ../menulibre/MenulibreApplication.py:1040
-msgid "Select an executable..."
+msgid "Select an executable…"
 msgstr "Wybór pliku wykonalnego..."
 
 #: ../menulibre/MenulibreApplication.py:1062
@@ -847,8 +843,8 @@ msgstr ""
 #~ msgid "_Edit"
 #~ msgstr "_Edycja"
 
-#~ msgid "<b>Preview</b>"
-#~ msgstr "<b>Podgląd</b>"
+#~ msgid "Preview"
+#~ msgstr "Podgląd"
 
 #~ msgid "Icon Selection"
 #~ msgstr "Wybór ikony"
@@ -858,9 +854,6 @@ msgstr ""
 
 #~ msgid "Action Name"
 #~ msgstr "Nazwa czynności"
-
-#~ msgid "<b>Select an image</b>"
-#~ msgstr "<b>Proszę wybrać obraz</b>"
 
 #~ msgid "16px"
 #~ msgstr "16 px"
