--- a/po/pt.po
+++ b/po/pt.po
@@ -173,7 +173,7 @@ msgid "Browse Icons…"
 msgstr "Navegar Icons..."
 
 #: ../data/ui/MenulibreWindow.ui.h:29
-msgid "Browse Files..."
+msgid "Browse Files…"
 msgstr "Navegar Ficheiros..."
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/Dialogs.py:39
@@ -223,14 +223,10 @@ msgid "Sort"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:41
-msgid "<small><i>Filename</i></small>"
-msgstr "<small><i>Nome de ficheiro</i></small>"
+msgid "Filename"
+msgstr "Nome de ficheiro"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
-msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Nome da aplicação</b></big>"
-
-#: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Application Name"
 msgstr "Nome da aplicação"
 
@@ -270,8 +266,8 @@ msgid "Working Directory"
 msgstr "Pasta de trabalho"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
-msgid "<b>Application Details</b>"
-msgstr "<b>Detalhes da aplicação</b>"
+msgid "Application Details"
+msgstr "Detalhes da aplicação"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "If set to \"True\", the program will be ran in a terminal window."
@@ -309,8 +305,8 @@ msgid "Hide from menus"
 msgstr "Ocultar dos menus"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
-msgid "<b>Options</b>"
-msgstr "<b>Opções</b>"
+msgid "Options"
+msgstr "Opções"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "Add"
@@ -348,8 +344,8 @@ msgid "Apply"
 msgstr "Aplicar"
 
 #: ../data/ui/MenulibreWindow.ui.h:67
-msgid "<b>Select an icon</b>"
-msgstr "<b>Escolha um ícone</b>"
+msgid "Select an icon"
+msgstr "Escolha um ícone"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Search"
@@ -364,7 +360,7 @@ msgid "Log - Menulibre"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:71
-msgid "<big><b>Parsing Errors</b></big>"
+msgid "Parsing Errors"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:72
@@ -610,27 +606,27 @@ msgstr ""
 "informações."
 
 #: ../menulibre/MenulibreApplication.py:333
-msgid "Add _Launcher..."
+msgid "Add _Launcher…"
 msgstr "Adicionar _lançador..."
 
 #: ../menulibre/MenulibreApplication.py:334
-msgid "Add Launcher..."
+msgid "Add Launcher…"
 msgstr "Adicionar lançador..."
 
 #: ../menulibre/MenulibreApplication.py:340
-msgid "Add _Directory..."
+msgid "Add _Directory…"
 msgstr "Adicionar _diretório..."
 
 #: ../menulibre/MenulibreApplication.py:341
-msgid "Add Directory..."
+msgid "Add Directory…"
 msgstr "Adicionar diretório..."
 
 #: ../menulibre/MenulibreApplication.py:347
-msgid "_Add Separator..."
+msgid "_Add Separator…"
 msgstr "_Adicionar separador..."
 
 #: ../menulibre/MenulibreApplication.py:348
-msgid "Add Separator..."
+msgid "Add Separator…"
 msgstr "Adicionar separador..."
 
 #: ../menulibre/MenulibreApplication.py:354
@@ -721,11 +717,11 @@ msgid "New Shortcut"
 msgstr "Novo atalho"
 
 #: ../menulibre/MenulibreApplication.py:1037
-msgid "Select a working directory..."
+msgid "Select a working directory…"
 msgstr "Selecione o diretório de trabalho"
 
 #: ../menulibre/MenulibreApplication.py:1040
-msgid "Select an executable..."
+msgid "Select an executable…"
 msgstr "Selecione o executável..."
 
 #: ../menulibre/MenulibreApplication.py:1062
@@ -851,11 +847,8 @@ msgstr ""
 #~ msgid "_File"
 #~ msgstr "_Ficheiro"
 
-#~ msgid "<b>Select an image</b>"
-#~ msgstr "<b>Selecione uma imagem</b>"
-
-#~ msgid "<b>Preview</b>"
-#~ msgstr "<b>Pré-visualização</b>"
+#~ msgid "Preview"
+#~ msgstr "Pré-visualização"
 
 #~ msgid "32px"
 #~ msgstr "32px"
