--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -162,7 +162,7 @@ msgid "Browse Icons…"
 msgstr "Procurar ícones..."
 
 #: ../data/ui/MenulibreWindow.ui.h:29
-msgid "Browse Files..."
+msgid "Browse Files…"
 msgstr "Procurar arquivos..."
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/Dialogs.py:39
@@ -212,16 +212,12 @@ msgid "Sort"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:41
-msgid "<small><i>Filename</i></small>"
-msgstr "<small><i>Nome do arquivo</i></small>"
+msgid "Filename"
+msgstr "Nome do arquivo"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
-msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Nome do Aplicativo</b></big>"
-
-#: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Application Name"
-msgstr "Nome do aplicativo"
+msgstr "Nome do Aplicativo"
 
 #: ../data/ui/MenulibreWindow.ui.h:44
 msgid "Application Comment"
@@ -253,8 +249,8 @@ msgid "Working Directory"
 msgstr "Diretório de Trabalho"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
-msgid "<b>Application Details</b>"
-msgstr "<b>Detalhes do aplicativo</b>"
+msgid "Application Details"
+msgstr "Detalhes do aplicativo"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "If set to \"True\", the program will be ran in a terminal window."
@@ -286,8 +282,8 @@ msgid "Hide from menus"
 msgstr "Esconder dos menus"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
-msgid "<b>Options</b>"
-msgstr "<b>Opções</b>"
+msgid "Options"
+msgstr "Opções"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "Add"
@@ -325,8 +321,8 @@ msgid "Apply"
 msgstr "Aplicar"
 
 #: ../data/ui/MenulibreWindow.ui.h:67
-msgid "<b>Select an icon</b>"
-msgstr "<b>Selecione um ícone</b>"
+msgid "Select an icon"
+msgstr "Selecione um ícone"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Search"
@@ -341,7 +337,7 @@ msgid "Log - Menulibre"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:71
-msgid "<big><b>Parsing Errors</b></big>"
+msgid "Parsing Errors"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:72
@@ -583,27 +579,27 @@ msgid ""
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:333
-msgid "Add _Launcher..."
+msgid "Add _Launcher…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:334
-msgid "Add Launcher..."
+msgid "Add Launcher…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:340
-msgid "Add _Directory..."
+msgid "Add _Directory…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:341
-msgid "Add Directory..."
+msgid "Add Directory…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:347
-msgid "_Add Separator..."
+msgid "_Add Separator…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:348
-msgid "Add Separator..."
+msgid "Add Separator…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:354
@@ -694,11 +690,11 @@ msgid "New Shortcut"
 msgstr "Novo Atalho"
 
 #: ../menulibre/MenulibreApplication.py:1037
-msgid "Select a working directory..."
+msgid "Select a working directory…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:1040
-msgid "Select an executable..."
+msgid "Select an executable…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:1062
@@ -819,17 +815,14 @@ msgstr ""
 #~ msgid "_File"
 #~ msgstr "_Arquivo"
 
-#~ msgid "<b>Preview</b>"
-#~ msgstr "<b>Pré-Visualização</b>"
+#~ msgid "Preview"
+#~ msgstr "Pré-Visualização"
 
 #~ msgid "Icon Selection"
 #~ msgstr "Seleção de Ícone"
 
 #~ msgid "64px"
 #~ msgstr "64px"
-
-#~ msgid "<b>Select an image</b>"
-#~ msgstr "<b>Selecione uma imagem</b>"
 
 #~ msgid "32px"
 #~ msgstr "32px"
