--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -149,7 +149,7 @@ msgid "Browse Icons…"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:29
-msgid "Browse Files..."
+msgid "Browse Files…"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/Dialogs.py:39
@@ -199,16 +199,12 @@ msgid "Sort"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:41
-msgid "<small><i>Filename</i></small>"
-msgstr "<small><i>Nome do ficheiro</i></small>"
+msgid "Filename"
+msgstr "Nome do ficheiro"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
-msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Nome da Aplicação</b></big>"
-
-#: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Application Name"
-msgstr ""
+msgstr "Nome da Aplicação"
 
 #: ../data/ui/MenulibreWindow.ui.h:44
 msgid "Application Comment"
@@ -240,8 +236,8 @@ msgid "Working Directory"
 msgstr "Diretório de trabalho"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
-msgid "<b>Application Details</b>"
-msgstr "<b>Detalhes da Aplicação</b>"
+msgid "Application Details"
+msgstr "Detalhes da Aplicação"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "If set to \"True\", the program will be ran in a terminal window."
@@ -272,8 +268,8 @@ msgid "Hide from menus"
 msgstr "Esconder dos menus"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
-msgid "<b>Options</b>"
-msgstr "<b>Opções</b>"
+msgid "Options"
+msgstr "Opções"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "Add"
@@ -311,8 +307,8 @@ msgid "Apply"
 msgstr "Aplicar"
 
 #: ../data/ui/MenulibreWindow.ui.h:67
-msgid "<b>Select an icon</b>"
-msgstr "<b>Selecione um ícone</b>"
+msgid "Select an icon"
+msgstr "Selecione um ícone"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Search"
@@ -327,7 +323,7 @@ msgid "Log - Menulibre"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:71
-msgid "<big><b>Parsing Errors</b></big>"
+msgid "Parsing Errors"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:72
@@ -571,27 +567,27 @@ msgid ""
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:333
-msgid "Add _Launcher..."
+msgid "Add _Launcher…"
 msgstr "Adicionar_Lançador..."
 
 #: ../menulibre/MenulibreApplication.py:334
-msgid "Add Launcher..."
+msgid "Add Launcher…"
 msgstr "Adicionar Lançador..."
 
 #: ../menulibre/MenulibreApplication.py:340
-msgid "Add _Directory..."
+msgid "Add _Directory…"
 msgstr "Adicionar_diretório..."
 
 #: ../menulibre/MenulibreApplication.py:341
-msgid "Add Directory..."
+msgid "Add Directory…"
 msgstr "Adicionar diretório..."
 
 #: ../menulibre/MenulibreApplication.py:347
-msgid "_Add Separator..."
+msgid "_Add Separator…"
 msgstr "_Adicionar Separador..."
 
 #: ../menulibre/MenulibreApplication.py:348
-msgid "Add Separator..."
+msgid "Add Separator…"
 msgstr "Adicionar Separador..."
 
 #: ../menulibre/MenulibreApplication.py:354
@@ -682,11 +678,11 @@ msgid "New Shortcut"
 msgstr "Novo Atalho"
 
 #: ../menulibre/MenulibreApplication.py:1037
-msgid "Select a working directory..."
+msgid "Select a working directory…"
 msgstr "Selecione um diretório de trabalho..."
 
 #: ../menulibre/MenulibreApplication.py:1040
-msgid "Select an executable..."
+msgid "Select an executable…"
 msgstr "Selecione um ficheiro executável..."
 
 #: ../menulibre/MenulibreApplication.py:1062
@@ -801,11 +797,8 @@ msgstr ""
 #~ msgid "Icon Name"
 #~ msgstr "Nome do Ícone"
 
-#~ msgid "<b>Select an image</b>"
-#~ msgstr "<b>Selecione uma imagem</b>"
-
-#~ msgid "<b>Preview</b>"
-#~ msgstr "<b>Visualização</b>"
+#~ msgid "Preview"
+#~ msgstr "Visualização"
 
 #~ msgid "32px"
 #~ msgstr "32px"
