--- a/po/sr.po
+++ b/po/sr.po
@@ -164,7 +164,7 @@ msgid "Browse Icons…"
 msgstr "Прегледај иконице…"
 
 #: ../data/ui/MenulibreWindow.ui.h:29
-msgid "Browse Files..."
+msgid "Browse Files…"
 msgstr "Прегледај датотеке..."
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/Dialogs.py:39
@@ -214,14 +214,10 @@ msgid "Sort"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:41
-msgid "<small><i>Filename</i></small>"
-msgstr "<small><i>Име датотеке</i></small>"
+msgid "Filename"
+msgstr "Име датотеке"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
-msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Име програма</b></big>"
-
-#: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Application Name"
 msgstr "Име програма"
 
@@ -260,8 +256,8 @@ msgid "Working Directory"
 msgstr "Радна фасцикла"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
-msgid "<b>Application Details</b>"
-msgstr "<b>Појединости програма</b>"
+msgid "Application Details"
+msgstr "Појединости програма"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "If set to \"True\", the program will be ran in a terminal window."
@@ -297,8 +293,8 @@ msgid "Hide from menus"
 msgstr "Сакриј из изборника"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
-msgid "<b>Options</b>"
-msgstr "<b>Могућности</b>"
+msgid "Options"
+msgstr "Могућности"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "Add"
@@ -336,8 +332,8 @@ msgid "Apply"
 msgstr "Примени"
 
 #: ../data/ui/MenulibreWindow.ui.h:67
-msgid "<b>Select an icon</b>"
-msgstr "<b>Изаберите иконицу</b>"
+msgid "Select an icon"
+msgstr "Изаберите иконицу"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Search"
@@ -352,7 +348,7 @@ msgid "Log - Menulibre"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:71
-msgid "<big><b>Parsing Errors</b></big>"
+msgid "Parsing Errors"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:72
@@ -598,27 +594,27 @@ msgid ""
 msgstr "Молим, погледајте <a href='%s'>опис на мрежи</a> за више података."
 
 #: ../menulibre/MenulibreApplication.py:333
-msgid "Add _Launcher..."
+msgid "Add _Launcher…"
 msgstr "Додај _покретач..."
 
 #: ../menulibre/MenulibreApplication.py:334
-msgid "Add Launcher..."
+msgid "Add Launcher…"
 msgstr "Додај покретач..."
 
 #: ../menulibre/MenulibreApplication.py:340
-msgid "Add _Directory..."
+msgid "Add _Directory…"
 msgstr "Додај _фасциклу..."
 
 #: ../menulibre/MenulibreApplication.py:341
-msgid "Add Directory..."
+msgid "Add Directory…"
 msgstr "Додај фасциклу..."
 
 #: ../menulibre/MenulibreApplication.py:347
-msgid "_Add Separator..."
+msgid "_Add Separator…"
 msgstr "_Додај раздвајач..."
 
 #: ../menulibre/MenulibreApplication.py:348
-msgid "Add Separator..."
+msgid "Add Separator…"
 msgstr "Додај раздвајач..."
 
 #: ../menulibre/MenulibreApplication.py:354
@@ -709,11 +705,11 @@ msgid "New Shortcut"
 msgstr "Нова пречица"
 
 #: ../menulibre/MenulibreApplication.py:1037
-msgid "Select a working directory..."
+msgid "Select a working directory…"
 msgstr "Изаберите радну фасциклу..."
 
 #: ../menulibre/MenulibreApplication.py:1040
-msgid "Select an executable..."
+msgid "Select an executable…"
 msgstr "Изаберите извршну датотеку..."
 
 #: ../menulibre/MenulibreApplication.py:1062
@@ -837,11 +833,8 @@ msgstr ""
 #~ msgid "_Edit"
 #~ msgstr "_Уреди"
 
-#~ msgid "<b>Select an image</b>"
-#~ msgstr "<b>Изаберите слику</b>"
-
-#~ msgid "<b>Preview</b>"
-#~ msgstr "<b>Преглед</b>"
+#~ msgid "Preview"
+#~ msgstr "Преглед"
 
 #~ msgid "32px"
 #~ msgstr "32тач"
