--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -154,7 +154,7 @@ msgid "Browse Icons…"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:29
-msgid "Browse Files..."
+msgid "Browse Files…"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/Dialogs.py:39
@@ -204,16 +204,12 @@ msgid "Sort"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:41
-msgid "<small><i>Filename</i></small>"
+msgid "Filename"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:42
-msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>应用名称</b></big>"
-
-#: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Application Name"
-msgstr "应用程序名称"
+msgstr "应用名称"
 
 #: ../data/ui/MenulibreWindow.ui.h:44
 msgid "Application Comment"
@@ -245,7 +241,7 @@ msgid "Working Directory"
 msgstr "工作目录"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
-msgid "<b>Application Details</b>"
+msgid "Application Details"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:52
@@ -277,8 +273,8 @@ msgid "Hide from menus"
 msgstr "从 menus 中隐藏"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
-msgid "<b>Options</b>"
-msgstr "<b>选项</b>"
+msgid "Options"
+msgstr "选项"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "Add"
@@ -316,7 +312,7 @@ msgid "Apply"
 msgstr "应用"
 
 #: ../data/ui/MenulibreWindow.ui.h:67
-msgid "<b>Select an icon</b>"
+msgid "Select an icon"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:68
@@ -332,7 +328,7 @@ msgid "Log - Menulibre"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:71
-msgid "<big><b>Parsing Errors</b></big>"
+msgid "Parsing Errors"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:72
@@ -572,27 +568,27 @@ msgid ""
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:333
-msgid "Add _Launcher..."
+msgid "Add _Launcher…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:334
-msgid "Add Launcher..."
+msgid "Add Launcher…"
 msgstr "添加启动器..."
 
 #: ../menulibre/MenulibreApplication.py:340
-msgid "Add _Directory..."
+msgid "Add _Directory…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:341
-msgid "Add Directory..."
+msgid "Add Directory…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:347
-msgid "_Add Separator..."
+msgid "_Add Separator…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:348
-msgid "Add Separator..."
+msgid "Add Separator…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:354
@@ -683,11 +679,11 @@ msgid "New Shortcut"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:1037
-msgid "Select a working directory..."
+msgid "Select a working directory…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:1040
-msgid "Select an executable..."
+msgid "Select an executable…"
 msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:1062
@@ -808,8 +804,8 @@ msgstr ""
 #~ msgid "_File"
 #~ msgstr "文件(_F)"
 
-#~ msgid "<b>Preview</b>"
-#~ msgstr "<b>预览</b>"
+#~ msgid "Preview"
+#~ msgstr "预览"
 
 #~ msgid "Icon Selection"
 #~ msgstr "选择图标"
